--- a/backend/launchSettings.json
+++ b/backend/launchSettings.json
@@ -3,8 +3,12 @@
     "Docker Compose": {
       "commandName": "DockerCompose",
       "commandVersion": "1.0",
+      "composeLaunchAction": "LaunchBrowser",
+      "composeLaunchServiceName": "roomsense-backend",
+      "composeLaunchUrl": "{Scheme}://localhost:{ServicePort}/swagger",
       "serviceActions": {
-        "roomsense-backend": "StartDebugging"
+        "roomsense-backend": "StartDebugging",
+        "roomsense-database": "StartWithoutDebugging"
       }
     }
   }
