--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -19,6 +19,10 @@ services:
       - MQTT_BROKER_PORT=8883
       - MQTT_BROKER_USERNAME=service
       - MQTT_BROKER_PASSWORD=Service1
+      - TEMPERATURE_THRESHOLD=30
+      - CO2_THRESHOLD=1000
+      - ALARM_PROCESSING_SERVICE_DELAY_MINUTES=1
+      - RECOMMENDATION_PROCESSING_SERVICE_DELAY_MINUTES=1 
     networks:
       - roomsense-network
 
