--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -7,10 +7,10 @@ services:
       context: RoomSense-Backend
       dockerfile: Dockerfile
     ports:
-      - "8080:80"
-      - "1883:1883"
-      - "8883:8883"
-      - "8884:8884"
+      - "8081:80"    # Changed from 8080 to 8081
+      - "1884:1883"  # Changed from 1883 to 1884
+      - "8885:8883"  # Changed from 8883 to 8885
+      - "8886:8884"  # Changed from 8884 to 8886
     depends_on:
       - roomsense-database
     environment:
@@ -47,10 +47,10 @@ services:
     depends_on:
       - roomsense-backend
     ports:
-      - "8080:80"
-      - "1883:1883"
-      - "8883:8883"
-      - "8884:8884"
+      - "8082:80"    # Changed from 8080 to 8082
+      - "1885:1883"  # Changed from 1883 to 1885
+      - "8887:8883"  # Changed from 8883 to 8887
+      - "8888:8884"  # Changed from 8884 to 8888
     environment:
       - MQTT_BROKER_URL=c93e99eaf93b4f81aa4db3ba6fee2780.s1.eu.hivemq.cloud
       - MQTT_BROKER_PORT=8883
@@ -59,7 +59,7 @@ services:
       - MQTT_TOPIC=room/simulator1
     networks:
       - roomsense-network 
-- 
+
   sensor-simulator-2:
     image: ${DOCKER_REGISTRY-}sensorsimulator
     build:
@@ -68,10 +68,10 @@ services:
     depends_on:
       - roomsense-backend
     ports:
-      - "8080:80"
-      - "1883:1883"
-      - "8883:8883"
-      - "8884:8884"
+      - "8083:80"    # Changed from 8080 to 8083
+      - "1886:1883"  # Changed from 1883 to 1886
+      - "8889:8883"  # Changed from 8883 to 8889
+      - "8890:8884"  # Changed from 8884 to 8890
     environment:
       - MQTT_BROKER_URL=c93e99eaf93b4f81aa4db3ba6fee2780.s1.eu.hivemq.cloud
       - MQTT_BROKER_USERNAME=sensor-simulator-2
