added basic react frontend (showing sensors for each room works now) --> missing the readings /recommendations and alarms --> backend + adapted appsettings and override docker compose to fix the port to a specific one

--- a/backend/RoomSense-Backend/appsettings.json
+++ b/backend/RoomSense-Backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Urls": {
+    "frontend": "http://localhost:3001"
+  },
   "AllowedHosts": "*"
 }
