--- a/deploy/ingress/Dockerfile
+++ b/deploy/ingress/Dockerfile
@@ -2,3 +2,4 @@ FROM nginx
 
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY index.html /usr/share/nginx/html/index.html
+COPY /build /usr/share/nginx/html/frontend
