--- a/deploy/ingress/nginx.conf
+++ b/deploy/ingress/nginx.conf
@@ -1,26 +1,29 @@
 events {
     worker_connections 1024;
 }
-
 http {
     upstream api {
         server roomsense-backend:80;
     }
-
     server {
         listen 80;
         listen 443 ssl;
         server_name iot.xaverb.dev;
-
         ssl_certificate /etc/nginx/certs/xaverb.dev.cer;
-		ssl_certificate_key /etc/nginx/certs/xaverb.dev.key;  # Add this line
-
+        ssl_certificate_key /etc/nginx/certs/xaverb.dev.key;
+        
         location /api/ {
             proxy_pass http://api/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
-
+        
+        location /cockpit/ {
+            alias /usr/share/nginx/html/frontend/;
+            index index.html;
+            try_files $uri $uri/ /cockpit/index.html;
+        }
+        
         location / {
             root /usr/share/nginx/html;
             index index.html;
