--- a/deploy/docker-compose-meta-base.yml
+++ b/deploy/docker-compose-meta-base.yml
@@ -37,6 +37,31 @@ services:
     volumes:
       - ./roomsense-db-data:/var/lib/postgresql/data
 
+  metabase:
+    image: metabase/metabase:latest
+    depends_on:
+      - metabase-database
+    environment:
+      - MB_DB_TYPE=postgres
+      - MB_DB_DBNAME=metabase
+      - MB_DB_PORT=5432
+      - MB_DB_USER=metabase
+      - MB_DB_PASS=metabase
+      - MB_DB_HOST=metabase-database
+    networks:
+      - roomsense-network
+    
+  metabase-database:
+    image: postgres:13
+    environment:
+      - POSTGRES_USER=metabase
+      - POSTGRES_PASSWORD=metabase
+      - POSTGRES_DB=metabase
+    networks:
+      - roomsense-network
+    volumes:
+      - ./metabase-db-data:/var/lib/postgresql/data
+
   roomsense-ingress:
     image: xaverb/roomsense-ingress:v1
     ports:
@@ -50,6 +75,7 @@ services:
       - ./xaverb.dev.key:/etc/nginx/certs/xaverb.dev.key
     depends_on:
       - roomsense-backend
+      - metabase
     networks:
       - roomsense-network
 
